--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-regex = "*"
-lazy_static = "*"
-maplit = "*"
+regex = "1.5.4"
+lazy_static = "1.4.0"
+maplit = "1.0.2"
